# Language

./: .gitmodules  CMakeLists.txt  Readme.md
.cache/clangd/index/: Buffer.h.719CD4AC10819D0F.idx  ColorConsole.cpp.AEF06579959F7137.idx  ColorConsole.h.BBCAD56F8D5D5333.idx  CustomAssert.cpp.6EB4C8E49D11D303.idx  CustomAssert.h.216D2AFE24F3489F.idx  FrontendCore.cpp.F24D59A072F9E667.idx  FrontendCore.h.B2605F5A38D05267.idx  Keywords.def.AA567A75AC9C001A.idx  Lexer.cpp.2ADFEA93237F0C9B.idx  Lexer.h.A32B0B99234448BA.idx  Logger.cpp.9D7BF235DE970C3A.idx  Logger.h.EE35E9198693E998.idx  NameTable.cpp.6A2EE134BDDE493C.idx  NameTable.h.6A24F2D7554101EF.idx  Parser.cpp.54822E599BF8838E.idx  SyntaxTree.cpp.E56ACBDEDB7FF976.idx  SyntaxTree.h.1546D014166BDB71.idx  Tree.h.4D46C8B8AC0F1CF8.idx  TreeDefinitions.h.B11B4A364AE5EA77.idx  TreeDump.h.EFFB391C97C2C67E.idx  TreeDumpColors.h.A57A368574FCE71B.idx  TreePrints.h.F074A5AD1CF788E8.idx  main.cpp.E6F12F79F78E3BA7.idx
IRLib/: CMakeLists.txt
IRLib/doc/: IrUml.gaphor
IRLib/include/: Argument.h  BasicBlock.h  Constant.h  Function.h  FunctionType.h  GlobalVariable.h  IRBuilder.h  IRContext.h  IRPrinter.h  Instruction.h  InstructionId.h  MachineOpcodes.h  Type.h  Use.h  User.h  Value.h
IRLib/src/: Argument.cpp  BasicBlock.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  FunctionType.cpp  IRBuilder.cpp  IRContext.cpp  IRPrinter.cpp  Instruction.cpp  MachineOpcodes.cpp  Register.cpp  Type.cpp  Use.cpp  User.cpp  Value.cpp
ReverseFrontend/: CMakeLists.txt  main.cpp
ReverseFrontend/include/: Dump.h  ReverseFrontendCore.h  TreeTranslator.h
ReverseFrontend/src/: CMakeLists.txt  Dump.cpp  ReverseFrontendCore.cpp  TreeTranslator.cpp
SyntaxTree/: CMakeLists.txt
SyntaxTree/include/: Keywords.def  NameTable.h  SyntaxTree.h
SyntaxTree/src/: NameTable.cpp  SyntaxTree.cpp
TreeReader/: CMakeLists.txt
TreeReader/include/: TreeReader.h
TreeReader/src/: NameTableReader.cpp  TreeReader.cpp
backend/: CMakeLists.txt  main.cpp
backend/asm/: stdlib.asm
backend/include/: AssemblyGaynerator.h  AssemblyGenerator.h  BackendCore.h  Dump.h  FunctionType.h  Ir.h  IrBuilder.h  MachineOpcodes.h  Opcodes.h  Register.h  TreeReader.h
backend/include/AST/: AstNode.h  AstType.h  TranslationContext.h
backend/include/Codegen/: BoolOperations.h  DoubleOperators.h  IntegerOperators.h
backend/include/TreeReader/: TreeReader.h
backend/src/: AssemblyGaynerator.cpp  AssemblyGenerator.cpp  BackendCore.cpp  CMakeLists.txt  Dump.cpp  FunctionType.cpp  Ir.cpp  IrBuilder.cpp  MachineOpcodes.cpp  Opcodes.cpp  Register.cpp  TreeReader.cpp
backend/src/AST/: AstNode.cpp  AstType.cpp  CMakeLists.txt
backend/src/Codegen/: AssignmentCodegen.cpp  BoolOperators.cpp  BreakCodegen.cpp  CMakeLists.txt  ConditionsCodegen.cpp  ConstantCodegen.cpp  DoubleOperators.cpp  FunctionCodegen.cpp  IOCodegen.cpp  IfCodegen.cpp  IntegerOperators.cpp  OperatorCodegen.cpp  OperatorSeparatorCodegen.cpp  ReturnCodegen.cpp  TranslationContext.cpp  VariableCodegen.cpp
backend/src/TreeReader/: CMakeLists.txt  TreeReader.cpp
frontend/: CMakeLists.txt  main.cpp
frontend/Resources/: pattern_header.html
frontend/docs/: Grammar.txt  Report.html  testProgram.phc
frontend/include/: Dump.h  ErrorWriter.h  ExpressionParser.h  FrontendCore.h  Lexer.h  Parser.h  ParserBasics.h  TreeSaver.h
frontend/src/: CMakeLists.txt  Dump.cpp  ErrorWriter.cpp  ExpressionParser.cpp  FrontendCore.cpp  Lexer.cpp  Parser.cpp  ParserBasics.cpp  TreeSaver.cpp
libs/: CMakeLists.txt
middleend/: CMakeLists.txt  main.cpp
middleend/include/: DSL.h  Differentiator.h  MiddleEndCore.h  NodeUtils.h  Operations.def  Optimizations.h  TreeSaver.h
middleend/src/: CMakeLists.txt  Differentiator.cpp  MiddleEndCore.cpp  NodeUtils.cpp  Optimizations.cpp  TreeSaver.cpp
tests/: CompilationReport.html  Makefile  call_test.phc  compile.sh  factorial  factorial.phc  qqq.phc  quadratic  quadratic.phc  quadratic_sanya  while_test.phc
tests/228_sanya/: id_table.txt  tree_save.txt
